--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -6,7 +6,6 @@ html, body {
   height: 100%; 
   padding: 0 !important;
   margin: 0;
-  overflow: hidden;
 }
 
 body { 
